--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 CAP6675 - Complex Adaptive Systems/EmergenceOfScalingPresentation/~$PresentationDraft2.pptx
+CAP6675 - Complex Adaptive Systems/~$intBoothReview.docx
+CAP6675 - Complex Adaptive Systems/~WRL3452.tmp
