Updates to final exam review

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 CAP6675 - Complex Adaptive Systems/EmergenceOfScalingPresentation/~$PresentationDraft2.pptx
 CAP6675 - Complex Adaptive Systems/~$intBoothReview.docx
 CAP6675 - Complex Adaptive Systems/~WRL3452.tmp
+CAP6675 - Complex Adaptive Systems/StudentPresentations/042GossNaturwissenschaften89.pdf
